--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "www.js",
   "dependencies": {
     "body-parser": "^1.9.0",
+    "currentcms": "0.0.3",
     "ejs": "^1.0.0",
     "express": "^4.9.7",
-    "nodemailer": "^1.3.0"
+    "nodemailer": "^1.3.0",
+    "mongoose": "^3.8.17",
+    "prompt": "^0.2.14"
   },
   "devDependencies": {},
   "scripts": {
